# SIMDIntroProposal

./: CMakeLists.txt  README  SIMDFuncsAVX.h  SIMDFuncsNEON.h  SIMDFuncsNone.h  SIMDFuncsSSE.h  Utilities.h  main.cpp
